--- a/src/mummybot.csproj
+++ b/src/mummybot.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -7,9 +7,16 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0-preview.18572.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.0.0-preview.18572.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0-preview.18572.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0"/>
     </ItemGroup>
 
 </Project>
