--- a/src/mummybot.csproj
+++ b/src/mummybot.csproj
@@ -16,7 +16,9 @@
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+        <PackageReference Include="NLog" Version="4.6.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
+        <PackageReference Include="NLog.Config" Version="4.6.2" />
     </ItemGroup>
 
 </Project>
