--- a/src/mummybot.csproj
+++ b/src/mummybot.csproj
@@ -2,7 +2,10 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <PackageProjectUrl>https://gitlab.com/mummy603/mummybot</PackageProjectUrl>
+        <RepositoryUrl>https://gitlab.com/mummy603/mummybot.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
     </PropertyGroup>
 
     <ItemGroup>
