--- a/src/mummybot.csproj
+++ b/src/mummybot.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />
         <PackageReference Include="NLog" Version="4.6.7" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.1" />
         <PackageReference Include="NRuneScape" Version="0.1.0" />
